--- a/src/pages/home/template.marko
+++ b/src/pages/home/template.marko
@@ -8,6 +8,14 @@
     <h1>Marko Custom Tags</h1>
 
     <app-hello name="Frank"/>
-    <app-hello-template name="John"/>    
+    <app-hello-template name="John"/>
+
+    <h2>
+        The custom tags below come from the "sample-custom-tags-foo" package
+        that is installed into this project:
+    </h2>
+
+    <sample-custom-tags-say-hello name="Jane"/>
+    <sample-custom-tags-foo/>
 </body>
 </html>
